# gtk-theme

./: .add2git  .buildconfig  .gitignore  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTORS  HACKING.md  Makefile  Makefile-old  Makefile2  README.md  TESTING.md  gtk-3.0  index.theme.in  install.sh  meson.build  meson_options.txt  package.json  parse-sass.sh  scss-lint.yml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: --gtk2-issue.md  --gtk3-issue.md  --shell-issue.md  --sound-issue.md  --visual-issue.md  bug_report.md
debian/: NEWS  changelog  control  copyright  files  pop-gnome-shell-theme.install  pop-gnome-shell-theme.postinst  pop-gnome-shell-theme.preinst  pop-gnome-shell-theme.prerm  pop-gtk-theme.install  pop-gtk-theme.postinst  pop-gtk-theme.preinst  preinst  rules
debian/pop-gnome-shell-theme/DEBIAN/: control  md5sums  postinst  prerm
debian/pop-gtk-theme/DEBIAN/: control  md5sums
gnome-shell/: gnome-shell-sync.sh
gnome-shell/src/: README.md  gnome-shell.scss.in  meson.build
gnome-shell/src/dark/: gnome-shell.scss  meson.build
gnome-shell/src/data/: gnome-shell-theme.gresource.xml
gnome-shell/src/gnome-shell-sass/: _colors.scss  _common.scss  _cosmic.scss  _dock.scss  _drawing.scss  _high-contrast-colors.scss  _pop-os-colors.scss  _pop_os_colors.scss
gnome-shell/src/light/: gnome-shell.scss  meson.build
gtk-3.0/: animate.css  apps.css  granite-widgets-dark.css  granite-widgets.css  gtk-dark.css  gtk-widgets-dark.css  gtk-widgets.css  gtk.css
gtk-3.22/: gtk-dark.scss  gtk.scss
gtk-3.22/scss/: _animate.scss  _gtk-widgets-dark.scss  _gtk-widgets.scss
gtk/src/: index.theme.in
gtk/src/dark/: meson.build
gtk/src/light/: meson.build
gtk/upstream/gtk+3.0/: adwaita-sync.sh  libhdy-sync.sh
metadata/: index.theme.in
obj-x86_64-linux-gnu/: .ninja_deps  .ninja_log  build.ninja
obj-x86_64-linux-gnu/meson-logs/: install-log.txt  meson-log.txt
obj-x86_64-linux-gnu/meson-private/: cmd_line.txt
obj-x86_64-linux-gnu/sounds/: index.theme
plank/: dock.theme
sounds/: Pop_Sounds_source.mmpz  Pop_Sounds_source.mmpz.bak  README.md  meson.build
sounds/src/: index.theme.in
sounds/src/stereo/: bell.oga  (+13 more)
src/: index-dark-compact.theme  index-light-compact.theme  index-light.theme  index-slim.theme  index.theme
src/gnome-shell/: 3.26
src/gtk-2.0/: assets-dark.svg.in  assets.svg.in  gtkrc  gtkrc-dark  gtkrc-dark.in  gtkrc-light  gtkrc-light.in  gtkrc.in  main.rc.hidpi  recolor-assets.sh
src/gtk-3.22/: gtk-dark.scss  gtk.scss
src/gtk-common/: gtk-dark.scss  gtk.scss
src/gtk2/: apps.rc  gtkrc.in  main-dark.rc  main.rc  recolor-assets.sh
src/metacity-1/: metacity-theme-2-light.xml  metacity-theme-3-light.xml  metacity-theme-3.xml
src/plank/: dock.theme
src/xfwm4/: recolor-assets.sh
(+439 files in other folders)
